[gd_scene load_steps=7 format=3 uid="uid://dmefx6fflv4d5"]

[ext_resource type="Script" path="res://Vision_Test.gd" id="1_culkp"]

[sub_resource type="BoxMesh" id="BoxMesh_ler3d"]

[sub_resource type="BoxMesh" id="BoxMesh_tashk"]
size = Vector3(0.484, 0.486, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_8roig"]

[sub_resource type="CylinderMesh" id="CylinderMesh_jhvfv"]
top_radius = 5.208
height = 10.01

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_wbvaa"]
points = PackedVector3Array(0, 5.005, -5.208, 0, 3.00222, -4.26693, -0.510808, 5.005, -5.18353, 0.509789, 5.005, -5.18353, 0.418026, 3.00222, -4.24654, 0.0489397, -5.005, -0.498573, 0, -5.005, -0.500613, -0.0499592, -5.005, -0.498573, -0.419046, 3.00222, -4.24654, -0.832994, 3.00222, -4.18536, -1.01652, 5.005, -5.10808, 1.0155, 5.005, -5.10808, 0.831975, 3.00222, -4.18536, 0.464927, -1.00139, -2.33789, 0.0968599, -5.005, -0.490417, -0.0978794, -5.005, -0.490417, -0.465947, -1.00139, -2.33789, -1.23879, 3.00222, -4.08341, -1.51203, 5.005, -4.98471, -0.1458, -5.005, -0.479201, -0.419046, -3.0032, -1.38051, 1.51101, 5.005, -4.98471, 1.23777, 3.00222, -4.08341, 0.418026, -3.0032, -1.38051, 0.14478, -5.005, -0.479201, -1.99327, 5.005, -4.8124, -0.19168, -5.005, -0.462888, -0.552611, -3.0032, -1.33259, 1.99225, 5.005, -4.8124, 0.190661, -5.005, -0.462888, 0.551591, -3.0032, -1.33259, -2.01163, 3.00222, -3.76326, -2.45514, 5.005, -4.59319, -0.236542, -5.005, -0.441477, 2.45412, 5.005, -4.59319, 2.01061, 3.00222, -3.76326, 0.235522, -5.005, -0.441477, -2.37052, 3.00222, -3.54813, -2.89356, 5.005, -4.33116, -0.278345, -5.005, -0.415987, 2.89254, 5.005, -4.33116, 2.3695, 3.00222, -3.54813, 0.277325, -5.005, -0.415987, -2.70698, 3.00222, -3.29833, -3.30445, 5.005, -4.02631, -0.318108, -5.005, -0.387439, 3.30343, 5.005, -4.02631, 2.70596, 3.00222, -3.29833, 0.317089, -5.005, -0.387439, -3.01693, 3.00222, -3.01693, -3.68271, 5.005, -3.68271, -0.353794, -5.005, -0.353794, 3.68169, 5.005, -3.68271, 3.01591, 3.00222, -3.01693, 0.352774, -5.005, -0.353794, -3.29833, 3.00222, -2.70698, -4.02631, 5.005, -3.30445, -0.387439, -5.005, -0.318108, 4.02529, 5.005, -3.30445, 3.29731, 3.00222, -2.70698, 0.38642, -5.005, -0.318108, -3.54813, 3.00222, -2.37052, -4.33116, 5.005, -2.89356, -0.415987, -5.005, -0.278345, 3.54711, 3.00222, -2.37052, 4.33014, 5.005, -2.89356, 0.414968, -5.005, -0.278345, -3.76326, 3.00222, -2.01163, -0.441477, -5.005, -0.236542, -4.59319, 5.005, -2.45514, 3.76224, 3.00222, -2.01163, 0.440457, -5.005, -0.236542, 4.59218, 5.005, -2.45514, -1.33259, -3.0032, -0.552611, -4.8124, 5.005, -1.99327, -0.462888, -5.005, -0.19168, 4.81138, 5.005, -1.99327, 1.33157, -3.0032, -0.552611, 0.461868, -5.005, -0.19168, -1.38051, -3.0032, -0.419046, -4.08341, 3.00222, -1.23879, -4.98471, 5.005, -1.51203, -0.479201, -5.005, -0.1458, 4.98369, 5.005, -1.51203, 4.08239, 3.00222, -1.23879, 1.37949, -3.0032, -0.419046, 0.478181, -5.005, -0.1458, -4.18536, 3.00222, -0.832994, -5.10808, 5.005, -1.01652, -0.490417, -5.005, -0.0978794, -2.33789, -1.00139, -0.465947, 5.10706, 5.005, -1.01652, 4.18434, 3.00222, -0.832994, 0.489397, -5.005, -0.0978794, 2.33687, -1.00139, -0.465947, -4.24654, 3.00222, -0.419046, -5.18353, 5.005, -0.510808, -0.498573, -5.005, -0.0499592, 5.18251, 5.005, -0.510808, 4.24552, 3.00222, -0.419046, 0.497553, -5.005, -0.0499592, -4.26693, 3.00222, 0, -5.208, 5.005, 0, -0.500613, -5.005, 0, 5.208, 5.005, 0, 0.499593, -5.005, 0, -4.24654, 3.00222, 0.418026, -5.18353, 5.005, 0.509789, -0.498573, -5.005, 0.0489397, 5.18251, 5.005, 0.509789, 4.24552, 3.00222, 0.418026, 0.497553, -5.005, 0.0489397, -4.18536, 3.00222, 0.831975, -5.10808, 5.005, 1.0155, -0.490417, -5.005, 0.0968599, -2.33789, -1.00139, 0.464927, 5.10706, 5.005, 1.0155, 4.18434, 3.00222, 0.831975, 0.489397, -5.005, 0.0968599, 2.33687, -1.00139, 0.464927, -0.479201, -5.005, 0.14478, -1.38051, -3.0032, 0.418026, -4.08341, 3.00222, 1.23777, -4.98471, 5.005, 1.51101, 4.98369, 5.005, 1.51101, 4.08239, 3.00222, 1.23777, 1.37949, -3.0032, 0.418026, 0.478181, -5.005, 0.14478, -0.462888, -5.005, 0.190661, -1.33259, -3.0032, 0.551591, -4.8124, 5.005, 1.99225, 4.81138, 5.005, 1.99225, 1.33157, -3.0032, 0.551591, 0.461868, -5.005, 0.190661, -0.441477, -5.005, 0.235522, -3.76326, 3.00222, 2.01061, -4.59319, 5.005, 2.45412, 4.59218, 5.005, 2.45412, 3.76224, 3.00222, 2.01061, 0.440457, -5.005, 0.235522, -0.415987, -5.005, 0.277325, -3.54813, 3.00222, 2.3695, -4.33116, 5.005, 2.89254, 4.33014, 5.005, 2.89254, 3.54711, 3.00222, 2.3695, 0.414968, -5.005, 0.277325, -0.387439, -5.005, 0.317089, -3.29833, 3.00222, 2.70596, -4.02631, 5.005, 3.30343, 4.02529, 5.005, 3.30343, 3.29731, 3.00222, 2.70596, 0.38642, -5.005, 0.317089, -0.353794, -5.005, 0.352774, -3.01693, 3.00222, 3.01591, -3.68271, 5.005, 3.68169, 3.68169, 5.005, 3.68169, 3.01591, 3.00222, 3.01591, 0.352774, -5.005, 0.352774, -0.318108, -5.005, 0.38642, -2.70698, 3.00222, 3.29731, -3.30445, 5.005, 4.02529, 3.30343, 5.005, 4.02529, 2.70596, 3.00222, 3.29731, 0.317089, -5.005, 0.38642, -0.278345, -5.005, 0.414968, -2.37052, 3.00222, 3.54711, -2.89356, 5.005, 4.33014, 2.89254, 5.005, 4.33014, 2.3695, 3.00222, 3.54711, 0.277325, -5.005, 0.414968, -0.236542, -5.005, 0.440457, -2.01163, 3.00222, 3.76224, -2.45514, 5.005, 4.59218, 2.45412, 5.005, 4.59218, 2.01061, 3.00222, 3.76224, 0.235522, -5.005, 0.440457, -0.19168, -5.005, 0.461868, -1.99327, 5.005, 4.81138, -0.552611, -3.0032, 1.33157, 1.99225, 5.005, 4.81138, 0.551591, -3.0032, 1.33157, 0.190661, -5.005, 0.461868, -0.1458, -5.005, 0.478181, -0.419046, -3.0032, 1.37949, -1.51203, 5.005, 4.98369, -1.23879, 3.00222, 4.08239, 1.51101, 5.005, 4.98369, 1.23777, 3.00222, 4.08239, 0.418026, -3.0032, 1.37949, 0.14478, -5.005, 0.478181, -0.0978794, -5.005, 0.489397, -0.465947, -1.00139, 2.33687, -0.832994, 3.00222, 4.18434, -1.01652, 5.005, 5.10706, 1.0155, 5.005, 5.10706, 0.831975, 3.00222, 4.18434, 0.0968599, -5.005, 0.489397, 0.464927, -1.00139, 2.33687, -0.0499592, -5.005, 0.497553, -0.419046, 3.00222, 4.24552, -0.510808, 5.005, 5.18251, 0.509789, 5.005, 5.18251, 0.418026, 3.00222, 4.24552, 0.0489397, -5.005, 0.497553, 0, -5.005, 0.499593, 0, 5.005, 5.208)

[node name="Vision_Test" type="StaticBody3D"]
collision_layer = 2
script = ExtResource("1_culkp")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_ler3d")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.426271)
mesh = SubResource("BoxMesh_tashk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_8roig")

[node name="VisionArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.043323, -0.999061, 0, 0.999061, 0.043323, 0, 0, 1.55202)
collision_layer = 0

[node name="MeshInstance3D" type="MeshInstance3D" parent="VisionArea"]
transform = Transform3D(1, 0, 0, 0, 1, -1.75999e-09, 0, 3.20603e-08, 1, 0, 3.83377, 0.166246)
visible = false
mesh = SubResource("CylinderMesh_jhvfv")

[node name="CollisionShape3D" type="CollisionShape3D" parent="VisionArea"]
transform = Transform3D(1, 0, 0, 0, 1, -1.75999e-09, 0, 3.20603e-08, 1, 0, 3.83377, 0.166246)
shape = SubResource("ConvexPolygonShape3D_wbvaa")

[node name="VisionTimer" type="Timer" parent="."]

[node name="VisionRayCast" type="RayCast3D" parent="."]

[connection signal="timeout" from="VisionTimer" to="." method="_on_vision_timer_timeout"]
